--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-dom": "^19.1.1",
     "@google/genai": "^1.15.0",
     "marked": "^13.0.2",
-    "react-diff-viewer-continued": "^3.4.0"
+    "react-diff-viewer-continued": "^3.4.0",
+    "dompurify": "^3.1.6"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
